@@ -24,6 +24,7 @@
  358925 download speeds aren't calculated accurately/correctly
  355805 add "mark group read before xover" to prefs dialog
  397347 posting error message could be more helpful
+ 397348 new feature: preferences option to clear the article cache on exit
 
 0.120 "Plate of Shrimp"
  356329 'Save Attachments' only saves one of multiple attachments (Walt)
